fix:updates project structure in features package
